<resources>
    <string name="app_name">My Subscriptions</string>
    <string name="subscriptions">Abos</string>
    <string name="button_new_subscription">Neu</string>
    <string name="text_view_subscriptions">Abos</string>
    <string name="button_goto_category">Kategorien</string>
    <string name="text_view_name" />
    <string name="duedate">Zahltag</string>
    <string name="duedate_preview">1.1.1970</string>
    <string name="button_save">Speichern</string>
    <string name="button_goto_subscriptions">Abos</string>
    <string name="button_new">Hinzufügen</string>
    <string name="button_new_category">Neu</string>
    <string name="delete">Löschen</string>
    <string name="pick_date">Datum Auswählen</string>
    <string name="text_view_new_subscription">Neues Abo</string>
    <string name="text_view_new_category">Neue Kategorie</string>
    <string name="notification_channel_desc">Kanal für die Abonnementbenachrichtigungen</string>
    <string name="label_frequency">Wiederholen:</string>
    <string name="delete_cancel">Abbrechen</string>
    <string name="default_category_name">Neue Kategorie</string>
    <string name="default_subscription_name">Neues Abo</string>
    <string name="text_view_color">Farbe:</string>
    <string name="yearly">Dieses Jahr</string>
    <string name="monthly">Dieser Monat</string>
</resources>